# swisstopo-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.de.md  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  LICENSE  README.de.md  README.md  RELEASE_NOTES_v0.1.0.md  SECURITY.de.md  SECURITY.md  claude_desktop_config.json  pyproject.toml  server.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  security.yml
audits/2026-05-29T034026-Z-swisstopo-mcp/: audit-meta.json  audit-report.md  profile.yaml  summary.json  verification-results.json
audits/2026-05-29T050007-Z-swisstopo-mcp/: audit-meta.json  audit-report.md  summary.json  verification-results.json
audits/2026-05-29T051418-Z-swisstopo-mcp/: audit-meta.json  audit-report.md  summary.json  verification-results.json
deploy/: ingress-sticky-sessions.yaml  kubernetes.yaml
docs/: deployment.md  geodaten-erweiterung-phase1.md  network-egress.md  roadmap.md
src/swisstopo_mcp/: __init__.py  api_client.py  config.py  geocoding.py  geodata.py  height.py  logging_config.py  models.py  oereb.py  openplz.py  overpass.py  rest_api.py  server.py  stac.py  wmts.py
tests/: test_api_client.py  test_config.py  test_context.py  test_egress_allowlist.py  test_geocoding.py  test_geodata.py  test_height.py  test_http_app.py  test_input_validation.py  test_logging.py  test_oereb.py  test_openplz.py  test_overpass.py  test_responses.py  test_rest_api.py  test_retry.py  test_shared_client.py  test_stac.py  test_wmts.py
(+31 files in other folders)
