[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "swisstopo-mcp"
version = "0.1.0"
description = "MCP server for Swiss federal geodata (Swisstopo APIs)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Schulamt Stadt Zürich" }]
keywords = ["mcp", "swisstopo", "geodata", "switzerland", "gis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]

[project.scripts]
swisstopo-mcp = "swisstopo_mcp.server:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["live: live API tests (require network, skipped in CI)"]
